--- a/myapp/templates/core/signup.html
+++ b/myapp/templates/core/signup.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Creative Colorlib SignUp Form</title>
+<title>Registration</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -16,7 +16,7 @@
 <body>
 	<!-- main -->
 	<div class="main-w3layouts wrapper">
-		<h1>Creative SignUp Form</h1>
+		<h1>Registration</h1>
 		<div class="main-agileinfo">
 			<div class="agileits-top">
 
@@ -42,8 +42,9 @@
 					</div>
 					<input type="submit" value="SIGNUP">
 				</form>
-				<p>Don't have an Account? <a href="#"> Login Now!</a></p>
+				<p>Already have an Account? <a href="signin"> Sign in Now!</a></p>
 			</div>
+		
 		</div>
 		<!-- copyright -->
 		<div class="colorlibcopy-agile">
