--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,9 @@
                   <a class="nav-link" href="watch.html"> Categories </a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="signin"> Sign in </a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="user/signup">Sign up</a>
                 </li>
               </ul>
@@ -350,7 +353,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="img_box">
-              <img src="assets/images/feature-1.png" alt="">
+              <img src="static/assets/images/feature-1.png" alt="">
             </div>
             <div class="detail_box">
               <h5>
@@ -363,7 +366,7 @@
           </div>
           <div class="col-md-6">
             <div class="img_box">
-              <img src="assets/images/feature-2.png" alt="">
+              <img src="static/assets/images/feature-2.png" alt="">
             </div>
             <div class="detail_box">
               <h5>
@@ -376,7 +379,7 @@
           </div>
           <div class="col-md-6">
             <div class="img_box">
-              <img src="assets/images/feature-3.png" alt="">
+              <img src="static/assets/images/feature-3.png" alt="">
             </div>
             <div class="detail_box">
               <h5>
@@ -389,7 +392,7 @@
           </div>
           <div class="col-md-6">
             <div class="img_box">
-              <img src="assets/images/feature-4.png" alt="">
+              <img src="static/assets/images/feature-4.png" alt="">
             </div>
             <div class="detail_box">
               <h5>
