--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,19 @@
                 <li class="nav-item">
                   <a class="nav-link" href="user/signup">Sign up</a>
                 </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Account
+                  </a>
+                  <div class="dropdown-menu drop-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="wish.html">Wishing list</a>
+                    <a class="dropdown-item" href="order.html">Orders</a>
+                    <a class="dropdown-item" href="blog-details.html">Blog Details</a>
+                    <a class="dropdown-item" href="basket.html">Shopping Cart</a>
+                    <a class="dropdown-item" href="settings.html">Settings</a>
+                    <a class="dropdown-item" href="{% url 'signout' %}">Sign out</a>
+                  </div>
+                </li>
               </ul>
               <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
                 <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
@@ -431,7 +444,7 @@
               <div class="col-12">
                 <div class="detail_box">
                   <div class="img_box">
-                    <img src="static/images/client.jpg" alt="">
+                    <img src="static/assets/images/client.jpg" alt="">
                   </div>
                   <div class="name_box">
                     <h5>
