--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -42,7 +42,7 @@
 					</div>
 					<input type="submit" value="SIGNUP">
 				</form>
-				<p>Already have an Account? <a href="signin"> Sign in Now!</a></p>
+				<p>Already have an Account? <a href="/signin"> Sign in Now!</a></p>
 			</div>
 		
 		</div>
