--- a/templates/products/create_product.html
+++ b/templates/products/create_product.html
@@ -5,10 +5,10 @@
 </head>
 <body>
     <h1>Create Product</h1>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ combined_form.as_p }}
-        <input type="submit" value="Create">
+        {{ form.as_p }}
+        <button type="submit">Сохранить</button>
     </form>
 </body>
 </html>
