--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
                   </a>
                   <div class="dropdown-menu drop-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-                    <a class="dropdown-item" href="wish.html">Wishing list</a>
+                    <a class="dropdown-item" href="{% url 'wishlist' %}">Wishing list</a>
                     <a class="dropdown-item" href="order.html">Orders</a>
                     <a class="dropdown-item" href="{% url 'delete_user' %}">Delete Profile</a>
                     <a class="dropdown-item" href="basket.html">Shopping Cart</a>
