add product absolute url

--- a/templates/products/products_list.html
+++ b/templates/products/products_list.html
@@ -7,7 +7,7 @@
       <br>
       ID: {{ product.id }}
       <br>
-      Полка: 
+      Полка: {{ product.product_category.get_absolute_url}}
       <br>
       Статус: {{ product.productdetails.status }}
       
