product details and category logic fixes

--- a/templates/products/category_list.html
+++ b/templates/products/category_list.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="mb-4">Категория {{current_category}}</h1>
+    <h1 class="mb-4">Категория {{ current_category}}</h1>
     <div class="row">
         {% for category in categories %}  <!-- Используйте categories вместо current_category -->
             <div class="col-md-4 mb-4">
@@ -12,7 +12,7 @@
                         <p class="card-text">
                                 {{ category.get_children.count }} Подкатегории
                         </p>
-                        <a href="{{ category.slug}}" class="btn btn-primary">Подробнее</a>
+                        <a href="{{ category.slug}}/" class="btn btn-primary">Подробнее</a>
                     </div>
                 </div>
             </div>
